Project01/force-app/main/default/objects/SOrders__c/SOrders__c.object-meta.xml
<CustomObject>
    <label>T&amp;J Special Order</label>
    <nameField>
        <displayFormat>SO-{0000}</displayFormat>
        <label>SOrders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T&amp;J Special Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>