Project01/force-app/main/default/objects/SOrders__c/fields/Sales_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Number</label>
    <referenceTo>Sales__c</referenceTo>
    <relationshipLabel>T&amp;J Special Orders</relationshipLabel>
    <relationshipName>T_J_Special_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>