Project01/force-app/main/default/objects/SOrders__c/fields/SO_Status__c.field-meta.xml
<CustomField>
    <fullName>SO_Status__c</fullName>
    <label>SO Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>