Project01/force-app/main/default/objects/SOrders__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>23</length>
    <type>Text</type>
</CustomField>